[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://fonts/arialbd.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/Button.gd" type="Script" id=4]
[ext_resource path="res://scripts/load_game_from_point.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.788235, 1, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 357.272
margin_top = 171.883
margin_right = 397.272
margin_bottom = 185.883
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Music Volume"

[node name="Label2" type="Label" parent="."]
margin_left = 357.272
margin_top = 218.883
margin_right = 492.272
margin_bottom = 242.883
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SFX Volume"

[node name="Label3" type="Label" parent="."]
margin_left = 357.272
margin_top = 260.883
margin_right = 492.272
margin_bottom = 284.883
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Text Speed
"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 520.207
margin_top = 174.416
margin_right = 716.207
margin_bottom = 190.416

[node name="HSlider2" type="HSlider" parent="."]
margin_left = 517.752
margin_top = 222.298
margin_right = 713.752
margin_bottom = 238.298

[node name="HSlider3" type="HSlider" parent="."]
margin_left = 516.524
margin_top = 264.041
margin_right = 712.524
margin_bottom = 280.041

[node name="Button" type="Button" parent="."]
margin_left = 378.143
margin_top = 421.114
margin_right = 390.143
margin_bottom = 441.114
custom_fonts/font = SubResource( 2 )
text = "Back to title"
script = ExtResource( 4 )

[node name="Button2" type="Button" parent="."]
margin_left = 554.307
margin_top = 420.587
margin_right = 768.307
margin_bottom = 455.587
custom_fonts/font = SubResource( 3 )
text = "Back to the Game"
script = ExtResource( 5 )
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="value_changed" from="HSlider3" to="." method="_on_HSlider3_value_changed"]
